apps/portfolio/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: portfolio
  namespace: portfolio
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - 'jerryyf.dev'
      port:
        name: http
        number: 80
        protocol: HTTP

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: portfolio
  namespace: portfolio
spec:
  gateways:
  - portfolio
  hosts:
  - 'jerryyf.dev'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: portfolio.portfolio.svc.cluster.local
        port:
          number: 3000
